fix spacing issue

--- a/frontend/src/components/Forms/ShoutoutsPage/ShoutoutsPage.module.css
+++ b/frontend/src/components/Forms/ShoutoutsPage/ShoutoutsPage.module.css
@@ -3,14 +3,14 @@
   align-self: center;
   margin: auto;
   padding-top: 10vh;
-  height: calc(100vh - 80px - 25vh);
+  height: calc(100vh - 150px - 25vh);
 }
 
 .shoutoutListContainer {
   width: 50%;
   align-self: center;
   margin: auto;
-  height: calc(100vh - 80px - 25vh);
+  padding-bottom: 10vh;
 }
 
 @media only screen and (max-width: 900px) {
